# mentoring-twelfth

./: .env  .gitignore  alembic.ini  poetry.toml  pyproject.toml
epic_events/: __main__.py  auth.py  database.py  permissions.py  validators.py
epic_events/controllers/: __init__.py  authentication.py  client.py  contract.py  event.py  user.py
epic_events/models/: __init__.py  client.py  contract.py  event.py  role.py  user.py
epic_events/views/: client.py  contract.py  event.py  user.py  users.py
migrations/: env.py
migrations/versions/: 093d1aabbfcb_.py  3362d341697e_.py  4271f7a7b015_.py  98b14a1edc6d_.py  99ca572ab545_.py  b1c4e6ff7ced_.py  d1c060433836_.py  d3dae21e23f0_.py  da72d2c5ffdd_.py  e94c8a0b92d6_.py
python_p12/: auth.py  database.py  main.py  validators.py
python_p12/controllers/: __init__.py  authentication.py  user.py
python_p12/models/: __init__.py  client.py  user.py
python_p12/views/: authentication.py  users.py
tests/unit/: conftest.py  test_auth.py  test_validators.py
tests/unit/views/: test_authentication.py  test_user.py
