[tool.poetry]
name = "python-p12"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_p12"}]

[tool.poetry.dependencies]
python = "^3.11"
greenlet = "^2.0.2" # Week version locking from sqlalchemy, 3.0.0 does not work
sqlalchemy = "^2.0.21"
bcrypt = "^4.0.1"
click = "^8.1.7"
psycopg2-binary = "^2.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
alembic = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
